--- a/src/Componants/Home/Header.module.css
+++ b/src/Componants/Home/Header.module.css
@@ -1,25 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
 
-.fix{
-  position:relative;
-
+.fix {
+  position: relative;
 }
 
 b {
   font-family: "Pacifico", cursive;
-}
-
-/* Header */
-.header_wrapper {
-  background-color: #f2f2f2;
-  padding: 10px;
-  display: flex;
- 
-}
-
-.header_part_2 {
-  display: flex;
-  align-items: center;
 }
 
 .logo {
@@ -29,48 +15,10 @@ b {
   margin-right: auto;
 }
 
-.search_bar input {
-  height: 35px;
-  width: 300px;
-  margin-left: 10px;
-  border-radius: 3px;
-  border: 1px solid #ccc;
-  padding: 0 10px;
-}
-
-.search_button {
-  height: 35px;
-  width: 50px;
-  background-color: red;
-  color: white;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-.favourite {
-  margin-left: 10px;
-}
-
-.header_part_1_phone,
-.header_part_1_lock,
-.header_part_1_user {
-  margin-left: 10px;
-}
-
-.vertical_line_small {
-  border-right: 1px solid #ccc;
-  height: 25px;
-  margin: 0 10px;
-}
-
-.currency {
-  margin-left: 10px;
-}
-
 /* Navbar */
 .navbar {
-  background-color: #293991;
+  background-color: #4B0082;
+  /* background-color: #293991; */
   padding: 10px;
 }
 
@@ -85,34 +33,6 @@ b {
   padding: 10px;
 }
 
-/* Banners */
-.banners {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1px;
-}
-
-.banner1,
-.banner2,
-.banner3 {
-  display: flex;
-  align-items: center;
-  
-}
-
-.vertical_line_small_2 {
-  border-left: 1px solid #ccc;
-  height: 25px;
-  margin: 0 10px;
-}
-
-.banner1 img,
-.banner2 img,
-.banner3 img {
-  margin-right: 10px;
-}
-
 /* Media Queries */
 @media screen and (max-width: 768px) {
   .logo {
@@ -120,38 +40,13 @@ b {
     text-align: center;
   }
 
-  .search_bar input {
-    width: calc(100% - 70px);
-  }
-
-  .header_part_1_phone,
-  .header_part_1_lock,
-  .header_part_1_user {
-    display: none;
-  }
-
   .navbar_link_holder {
     flex-wrap: wrap;
+    justify-content: center; /* Align items to the center */
   }
 
   .navbar_link_holder a {
-    flex: 1 0 50%;
+    flex: 1 0 50%; /* Each link takes 50% of the width */
     text-align: center;
-  }
-
-  .banners {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .vertical_line_small,
-  .vertical_line_small_2 {
-    display: none;
-  }
-
-  .banner1,
-  .banner2,
-  .banner3 {
-    margin-top: 10px;
   }
 }
