--- a/src/Componants/Home/Header.module.css
+++ b/src/Componants/Home/Header.module.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
 
 .fix {
-  position: relative;
+  position: sticky;
+  z-index: 999;
+  top: 0px;
 }
 
 b {
