--- a/src/Componants/About/About.css
+++ b/src/Componants/About/About.css
@@ -12,8 +12,7 @@
 
 .heading h1{
     font-family: Arial, Helvetica, sans-serif;
-
-    color: #ff6347;
+    color: #2656ae;
     font-size: 55px;
     text-align: center;
     margin-top: 35px;
