--- a/src/Componants/Category/brand.module.css
+++ b/src/Componants/Category/brand.module.css
@@ -8,12 +8,14 @@
     height: 10%;
     background-color:white;
     width: 100%; /* Adjust the width of the body */
+    height: 90vh;
 
   }
   
   .slider_container {
     width: 100%;
     max-width: 100%;
+    height: auto;
     overflow: hidden;
   }
   
@@ -38,9 +40,7 @@
     cursor: pointer;
     transition: transform 0.3s ease;
     /* width: 200px; Set card width */
-    width: calc(33.33% - 10px); /* Adjusted width for responsiveness */
-
-
+    width: calc(24.33% - 10px); /* Adjusted width for responsiveness */
   }
   
   .card:hover {
