--- a/src/Componants/SignUp/Signup.module.css
+++ b/src/Componants/SignUp/Signup.module.css
@@ -2,18 +2,16 @@
 
 
 .A{
-    background: url('Login1.jpg ');
+    /* background: url('Login1.jpg '); */
     height: auto;
     display: flex;
     justify-content: center;
-    backdrop-filter: brightness(80%);
+    /* backdrop-filter: brightness(80%); */
     background-size: cover;
     background-position: center;
     content: '';
-    background-color: rgba(0, 0, 0, 0.5); /* Adjust the alpha value (0.5) to change the opacity */
     z-index: 1; /* Ensure the overlay appears behind other content */
     animation: fadeInUp 2s ease;
-
 
 }
 
@@ -29,15 +27,15 @@
     background-size: cover;
     background-position: center;
     overflow: hidden;
-    margin: 40px auto; /* Center horizontally */
-    animation: fadeInRight 2s ease
+    margin: 5px 40px auto; /* Center horizontally */
+    animation: fadeInRight 2s ease;
 
 
 }
 
 form {
     box-sizing: border-box;
-    padding: 40px;
+    padding:  5px 40px;
     width: 100%;
     height: 100%;
     backdrop-filter: brightness(40%);
@@ -48,7 +46,6 @@ form {
 
 h1 {
     font-family: "Pacifico", cursive;
-
     font-weight: normal;
     font-size: 24px;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
@@ -56,6 +53,7 @@ h1 {
 }
 
 h2 {
+    text-align: center;
     font-weight: normal;
     font-size: 24px;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
@@ -72,7 +70,7 @@ label {
 
 input {
     background: rgba(255, 255, 255, 0.5);
-    height: 40px;
+    height: 35px;
     line-height: 40px;
     border-radius: 20px;
     padding: 0px 20px;
@@ -81,25 +79,25 @@ input {
     color: rgb(11, 10, 10);
 }
 .signupbutton {
-    background: rgba(45, 126, 231);
-    border: 1px solid rgb(190, 12, 12);
+    background: #2656ae;
+    border: 1px solid #2656ae;
     border-radius: 20px;
-    padding: 10px 20px; /* Add padding for better touch experience on mobile */
-    margin-top: 15px; /* Adjust margin for smaller screens */
+    padding: 5px 20px; /* Add padding for better touch experience on mobile */
+    margin-top: 5px; /* Adjust margin for smaller screens */
 }
 .signupbutton:hover{
-    background: rgb(204, 165, 57);
+    background: #2656ae;
 }
 
 .loginbutton {
     background: rgb(13, 73, 152);
-    border: 1px solid rgb(190, 12, 12);
+    border: 1px solid #2656ae;
     border-radius: 20px;
-    padding: 10px 20px; /* Add padding for better touch experience on mobile */
-    margin-top: 15px; /* Adjust margin for smaller screens */
+    padding: 5px 20px; 
+    /*margin-top: 15px; padding for better touch experience on mobile */
 }
 .loginbutton:hover{
-    background: rgb(204, 165, 57);
+    background: #2656ae;
 }
 
 @keyframes fadeInUp {
